--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
     <activity
         android:name="com.flickrproject.flickrphotos.View.MainActivity"
         android:label="@string/app_name"
-        android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
+        android:theme="@style/Theme.Material3.Dark"
         android:exported="true" >
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
